# PE-file-metadata-extraction-with-Hexagonal-architecture

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.pex  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  spark_config.yaml
src/adapters/: orm.py
src/adapters/entrypoints/cli/: main.py
src/adapters/entrypoints/cli/controllers/: metadata.py
src/adapters/repositories/: metadata.py
src/adapters/services/: metadata.py  metadata_extraction.py  storage.py
src/adapters/tools/: utils.py
src/adapters/tools/loggers/: default_logger.py  spark_logger.py
src/configurator/: config.py  containers.py
src/domain/: schemas.py  validators.py
src/domain/entities/: metadata.py
src/domain/ports/repositories/: metadata.py
src/domain/ports/services/: exceptions.py  metadata.py  metadata_extraction.py  storage.py
src/domain/ports/tools/loggers/: logger.py
tests/adapters/tools/: test_utils.py
tests/domain/: test_schemas.py
tests/domain/entities/: test_metadata.py
